--- a/themes/Next/source/css/_common/components/header/header.styl
+++ b/themes/Next/source/css/_common/components/header/header.styl
@@ -1,5 +1,4 @@
-.header { background-image: url("https://ws1.sinaimg.cn/large/694830ebgy1fh3pyd05klj21kw0f2dy2.jpg"); }
-
+.header { background-image: url('../images/bg.jpg'); }
 .header-inner { position: relative; }
 
 
